--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <div>
   <h1>{{this.title}}</h1>
-  <img [src] ="imgUrl" alt="Display photo of bridgeLabz">
+  <img [src] ="imgUrl" (click)="onClick($event)" alt="Display photo of bridgeLabz">
 </div>
