--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
 <div>
-  <h1>{{this.title}}</h1>
+  <h1>{{this.UserName}}</h1>
   <img [src] ="imgUrl" (click)="onClick($event)" alt="Display photo of bridgeLabz">
+</div>
+<div>
+  <input [(ngModel)] = 'UserName'/>
 </div>
